# nvim-send

./: Cargo.toml  README.md
src/: main.rs
