[package]
name = "nvim-send"
version = "0.0.1"
authors = ["Alexander Lopatin <github.com/alopatindev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Essentially the same thing as 'nvr --nostart --remote-send <keys>'"
repository = "https://github.com/alopatindev/nvim-send"
keywords = ["nvim", "neovim", "rpc", "cli", "client"]
readme = "README.md"
documentation = "https://github.com/alopatindev/nvim-send#readme"

[dependencies]
anyhow = "1"
clap = "2"
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", rev = "c9bef85e7f538148842cd618d4cdf7f4b330f92a", features = ["use_tokio"] }
tokio = "1"
